test/semantics/programs/invalid/match-undefined-var1.fav
match x with
3 -> ret "three"
